# Cool-Game

./: CMakeLists.txt
Levels/: demo.lvl
src/: ObjectManager.hpp  main.cpp
src/GameObject/: GameObject.hpp  GameObjects.hpp
src/GameObject/GameObjects/: ColouredTile.hpp  Player.hpp  TexturedTile.hpp
